# commit_critic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  cli.py  config.py  docker-compose.yml  exceptions.py  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  analyzer.py  prompts.py  writer.py
docs/: README.md  memory_ingestion.md  project_spec.md
memory/: __init__.py  comparisons.py  embeddings.py  extractor.py  profiler.py  schemas.py  seeder.py  store.py
output/: __init__.py  formatter.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_config.py  test_memory.py  test_vcs_operations.py
vcs/: __init__.py  operations.py  remote.py
